# rs-vsna

./: .gitignore  README.md
client/: Cargo.toml  __config__.example.json
client/src/: config.rs  main.rs
client/src/utils/: client_cli.rs  client_connect.rs  command_handler.rs  file_handler.rs  filepack.rs  mod.rs  ws.rs
server/: Cargo.toml  __config__.example.json
server/src/: config.rs  main.rs
server/src/utils/: command_handler.rs  file_handler.rs  filepack.rs  mod.rs  ws.rs
