[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
futures-util = "0.3.31"
local-ip-address = "0.6.13"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["full"] }
tokio-tungstenite = "0.28.0"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
walkdir = "2.5.0"
